--- a/mygame/mygame.vcxproj
+++ b/mygame/mygame.vcxproj
@@ -104,7 +104,7 @@
       <AdditionalIncludeDirectories>C:\CLibs\SDL2_ttf-2.0.15\include;C:\CLibs\SDL2_image-2.0.5\include;C:\CLibs\SDL2-2.0.10\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <SubSystem>Windows</SubSystem>
+      <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>C:\CLibs\SDL2_image-2.0.5\lib\x64;C:\CLibs\SDL2_ttf-2.0.15\lib\x64;C:\CLibs\SDL2-2.0.10\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>SDL2_image.lib;SDL2_ttf.lib;SDL2.lib;SDL2main.lib;%(AdditionalDependencies)</AdditionalDependencies>
@@ -137,7 +137,7 @@
       <AdditionalIncludeDirectories>C:\CLibs\SDL2_ttf-2.0.15\include;C:\CLibs\SDL2_image-2.0.5\include;C:\CLibs\SDL2-2.0.10\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <SubSystem>Windows</SubSystem>
+      <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -153,7 +153,15 @@
   <ItemGroup>
     <ClInclude Include="constants.h" />
     <ClInclude Include="menu.h" />
+    <ClInclude Include="resource.h" />
+    <ClInclude Include="resource1.h" />
     <ClInclude Include="tetris.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="mygame.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="assets\game.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
