--- a/mygame/mygame.vcxproj.filters
+++ b/mygame/mygame.vcxproj.filters
@@ -48,7 +48,7 @@
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="assets\game.ico">
+    <Image Include="..\x64\Debug\assets\game.ico">
       <Filter>资源文件</Filter>
     </Image>
   </ItemGroup>
